<resources>

    <string name="app_name">RepositorioAprendizaje</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_actividad_principal">ActividadPrincipal</string>
    <string name="tituloPrincipal">Repositorio de Conocimiento</string>
    <string name="mensajeInicio">Selecciona alguna de las siguientes opciones para empezar</string>
    <string name="botonInicio">Inicio</string>
    <string name="botonAyuda">Ayuda</string>
    <string name="botonAtras">Atras</string>
    <string name="login">Login</string>
    <string name="labelIngreso">Ingreso</string>
    <string name="botonAceptar">Aceptar</string>
    <string name="botonCancelar">Cancelar</string>
    <string name="tituloComboLogin">Perfiles</string>
    <string-array name="roles">
        <item >Seleccione</item>
        <item >Administrador</item>
        <item >Usuario</item>
    </string-array>
        <string name="seleccione1">Seleccione una Opción del Menú</string>
        <string name="crearCategoria">Registrar Categoria</string>
        <string name="consultaCategoria">Consultar Categoria</string>
        <string name="botonPuntos">...</string>

</resources>