<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="lanzar"
    android:background="@drawable/textura1" >

    <Button
        android:id="@+id/button2"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_x="169dp"
        android:layout_y="357dp"
        android:onClick="lanzar"
        android:text="@string/botonAyuda" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="3dp"
        android:layout_y="278dp"
        android:text="@string/mensajeInicio"
        android:textColor="@color/blanco" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="297dp"
        android:layout_height="166dp"
        android:layout_x="6dp"
        android:layout_y="74dp"
        android:src="@drawable/imagen_principal" />

    <Button
        android:id="@+id/button1"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_x="31dp"
        android:layout_y="357dp"
        android:onClick="iniciarSesion"
        android:text="@string/botonInicio" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_x="33dp"
        android:layout_y="29dp"
        android:text="@string/tituloPrincipal"
        android:textColor="@color/blanco"
        android:textSize="@dimen/tam_tres" />

</AbsoluteLayout>